# oasgen-k8s

./: Cargo.toml  Dockerfile  LICENSE  README.md  article.json  functions copy.jq  functions.jq  person.json  request-collection.json
.github/workflows/: build-image.yaml
oasgen-k8s-chart/: Chart.yaml  oasgen-k8s-0.1.0.tgz  values.yaml
oasgen-k8s-chart/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml
src/: main.rs
