[package]
name = "oasgen-k8s"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto=true
panic="abort"


[dependencies]
kube = { version = "0.85.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19.0", features = ["v1_26"] }
tokio = { version = "1.14.0", features = ["full"] }
anyhow = "1.0.44"
schematools = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }