[package]
name = "oasgen-k8s"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto=true
panic="abort"


[dependencies]
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_26"] }
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
schematools = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
enum-display-derive = "0.1"
